<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar"
            android:layout_width="168dp"
            android:layout_height="171dp"
            android:src="@drawable/avatar" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="42dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/titleNIM"
                android:layout_width="195dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/titleNIM"
                android:textAlignment="gravity" />

            <TextView
                android:id="@+id/NIM"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/NIM" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/titleNama"
                android:layout_width="195dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/titlenama"
                android:textAlignment="gravity"

                />

            <TextView
                android:id="@+id/Nama"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nama" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/titlekelas"
                android:layout_width="195dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/titlekelas"
                android:textAlignment="gravity" />

            <TextView
                android:id="@+id/kelas"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/kelas" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="206dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/rf"
            android:layout_width="353dp"
            android:layout_height="29dp"
            android:text="@string/References"
            android:textStyle="normal|bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/wb"
                android:layout_width="91dp"
                android:layout_height="120dp"
                android:text="@string/website"
                android:textStyle="normal|bold" />

            <LinearLayout
                android:layout_width="212dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/st"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/st" />

                <TextView
                    android:id="@+id/ad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ad" />

                <TextView
                    android:id="@+id/mb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mb" />

                <TextView
                    android:id="@+id/wemen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wemen" />

                <TextView
                    android:id="@+id/gfg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gfg" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</LinearLayout>