<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="387dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:text="@string/title"
            android:textSize="32sp"

            />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/play"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/play" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="194dp"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/profil"
            android:layout_width="143dp"
            android:layout_height="45dp"
            android:text="@string/profil" />

        <Button
            android:id="@+id/login"
            android:layout_width="143dp"
            android:layout_height="45dp"
            android:text="@string/login" />
    </LinearLayout>

</LinearLayout>