<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="438dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login"
            android:textSize="32sp"

            />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title"
            android:textSize="32sp"

            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="32dp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/play"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/play" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="296dp"
        android:gravity="center|top"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textUsername"
            android:layout_width="373dp"
            android:layout_height="wrap_content"
            android:text="@string/username" />

        <EditText
            android:id="@+id/username"
            android:layout_width="373dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textPassword"
            android:layout_width="373dp"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <EditText
            android:id="@+id/password"
            android:layout_width="373dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="39dp" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/login" />
    </LinearLayout>

</LinearLayout>